--- a/usingLibrary/index.html
+++ b/usingLibrary/index.html
@@ -72,6 +72,11 @@
 //===============================================================================================
 //React callback function
 
+
+// for the onCLick event
+function handleNumber(value){
+    alert(value);
+}
 // parent component
 function Calculator(){
     return(
@@ -83,18 +88,18 @@ function Calculator(){
             <CalcButton value="9"/>
             <CalcButton className="operator" value="*"/>
 
-            <CalcButton value="4"/>
-            <CalcButton value="5"/>
-            <CalcButton value="6"/>
+            <CalcButton value="4" onClick={handleNumber}/>
+            <CalcButton value="5" onClick={handleNumber}/>
+            <CalcButton value="6" onClick={handleNumber}/>
             <CalcButton className="operator" value="/"/>
 
-            <CalcButton value="1"/>
-            <CalcButton value="2"/>
-            <CalcButton value="3"/>
+            <CalcButton value="1" onClick={handleNumber}/>
+            <CalcButton value="2" onClick={handleNumber}/>
+            <CalcButton value="3" onClick={handleNumber}/>
             <CalcButton className="operator" value="+"/>
 
             <CalcButton value="C"/>
-            <CalcButton value="0"/>
+            <CalcButton value="0" onClick={handleNumber}/>
             <CalcButton className="operator" value="="/>
             <CalcButton className="operator" value="-"/>
         </div>
@@ -103,7 +108,7 @@ function Calculator(){
 // child component
 function CalcButton(props){
     return(
-        <button className={props.className}>{props.value}</button>
+        <button className={props.className} onClick={()=>props.onClick(props.value)}>{props.value}</button>
     );
 }
 ReactDOM.render(<div className="app-container"><Calculator/></div>, document.getElementById("app"));
