added the function to the clear button

--- a/usingLibrary/index.html
+++ b/usingLibrary/index.html
@@ -122,7 +122,7 @@ function handleClear(){
             <CalcButton value="3" onClick={handleNumber}/>
             <CalcButton className="operator" value="+"/>
 
-            <CalcButton value="C"/>
+            <CalcButton value="C" onClick={handleClear}/>
             <CalcButton value="0" onClick={handleNumber}/>
             <CalcButton className="operator" value="="/>
             <CalcButton className="operator" value="-"/>
